crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/snapshots/vize_croquis_cf__diagnostics__tests__markdown__severity_badges-2.snap
---
source: crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/markdown.rs
expression: markdown.as_str()
---
**WARNING** `vize:croquis/cf/unmatched-inject`

### test
