crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/snapshots/vize_croquis_cf__diagnostics__tests__markdown__to_markdown_destructuring.snap
---
source: crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/markdown.rs
expression: markdown.as_str()
---
**WARNING** `vize:croquis/cf/destructuring-breaks-reactivity`

### Destructuring props loses reactivity

**Problem**: Destructuring `props` extracts plain values, losing reactivity.

**What happens**:

```ts
const { count, name } = props // count, name are plain values
```

**Fix**: Use `toRefs()`:

```ts
const { count, name } = toRefs(props) // count, name are refs
```
