crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/snapshots/vize_croquis_cf__diagnostics__tests__markdown__to_markdown_watch_can_be_computed.snap
---
source: crates/vize_croquis_cf/src/diagnostics/diagnostics_tests/markdown.rs
expression: markdown.as_str()
---
**INFO** `vize:croquis/cf/watch-can-be-computed`

### watch can be replaced with computed

**Problem**: This `watch` callback only mutates a reactive value based on its source.

**Current code** (imperative, harder to trace):

```ts
watch(count, (newVal) => {
  doubled.value = transform(newVal)
})
```

**Why `computed` is better**:

```
┌─────────────────────────────────────────────────────────┐
│  watch + mutation       │  computed                     │
├─────────────────────────┼───────────────────────────────┤
│  Imperative flow      │  Declarative transformation │
│  Two variables        │  Single derived value       │
│  Manual sync needed   │  Auto-cached and reactive   │
│  Side effects possible│  Pure function guarantee    │
└─────────────────────────┴───────────────────────────────┘
```

**Refactored code** (declarative, easier to reason about):

```ts
const doubled = computed(() => count.value * 2)
```

**Note**: Use `watch` only when you need **side effects** (API calls, logging, etc.).
